namespace BulletInBoardServer.Models.Announcements.Attachments;

public interface IAttachment
{
    
}